src/objects/Knowledge_Article_View__c.object
<CustomObject>
    <fields>
        <fullName>Article_Id__c</fullName>
        <label>Article Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_URL__c</fullName>
        <label>Article URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Viewed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article Viewed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Article_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Article_Viewed_by__r.Manager.FirstName  &amp; &quot; &quot; &amp; Article_Viewed_by__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <formula>Article_Viewed_by__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>Article_Viewed_by__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Full_Name__c</fullName>
        <formula>Article_Viewed_by__r.FirstName &amp; &quot; &quot; &amp;  Article_Viewed_by__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewed_Year__c</fullName>
        <formula>Text(YEAR( DATEVALUE(CreatedDate)  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viewed Year</label>
        <type>Text</type>
    </fields>
    <label>Knowledge Article View</label>
    <listViews>
        <fullName>All_Knowledge_Article_Views</fullName>
        <columns>NAME</columns>
        <columns>Article_Id__c</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Article_URL__c</columns>
        <columns>Article_Viewed_by__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Knowledge Article Views</label>
        <language>en_US</language>
        <sharedTo>
            <group>Salesforce_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ArticleView-{0000}</displayFormat>
        <label>Knowledge Article View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Article Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>